fix bug in readme and add final dblp results

--- a/topic_modeling/tm_comparison/test_01.ipynb
+++ b/topic_modeling/tm_comparison/test_01.ipynb
@@ -490,14 +490,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{llrrrrrr}roup and GuidedBERTopicModel\n",
+      "\\begin{tabular}{llrrrrrr}\n",
       "\\toprule\n",
       "dataset & model & coherence_c_v & coherence_c_uci & coherence_c_npmi & coherence_u_mass & diversity & supervised_correlation \\\\\n",
       "\\midrule\n",
@@ -604,13 +604,13 @@
        "3          0.071613         -2.263779   0.814286                0.318357  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newsgroups_metrics_df = compute_metrics_df(dataset_name='20NewsGroup', models=models, n_iterations=5, load_from_file=False)\n",
+    "newsgroups_metrics_df = compute_metrics_df(dataset_name='20NewsGroup', models=models, n_iterations=5, load_from_file=True)\n",
     "print(newsgroups_metrics_df.to_latex(index=False))\n",
     "newsgroups_metrics_df"
    ]
@@ -624,11 +624,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llrrrrrr}\n",
+      "\\toprule\n",
+      "dataset & model & coherence_c_v & coherence_c_uci & coherence_c_npmi & coherence_u_mass & diversity & supervised_correlation \\\\\n",
+      "\\midrule\n",
+      "DBLP & LDAModel & 0.544437 & -0.275490 & 0.017506 & -2.186399 & 0.815000 & 0.501695 \\\\\n",
+      "DBLP & BERTopicModel & 0.518061 & -0.038156 & 0.026235 & -2.315851 & 0.812000 & 0.109049 \\\\\n",
+      "DBLP & GuidedLDAModel & 0.523195 & -0.119319 & 0.006700 & -2.471982 & 1.000000 & 0.373151 \\\\\n",
+      "DBLP & GuidedBERTopicModel & 0.555126 & -0.384500 & 0.012776 & -2.423790 & 0.720000 & 0.045340 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>model</th>\n",
+       "      <th>coherence_c_v</th>\n",
+       "      <th>coherence_c_uci</th>\n",
+       "      <th>coherence_c_npmi</th>\n",
+       "      <th>coherence_u_mass</th>\n",
+       "      <th>diversity</th>\n",
+       "      <th>supervised_correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DBLP</td>\n",
+       "      <td>LDAModel</td>\n",
+       "      <td>0.544437</td>\n",
+       "      <td>-0.275490</td>\n",
+       "      <td>0.017506</td>\n",
+       "      <td>-2.186399</td>\n",
+       "      <td>0.815</td>\n",
+       "      <td>0.501695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DBLP</td>\n",
+       "      <td>BERTopicModel</td>\n",
+       "      <td>0.518061</td>\n",
+       "      <td>-0.038156</td>\n",
+       "      <td>0.026235</td>\n",
+       "      <td>-2.315851</td>\n",
+       "      <td>0.812</td>\n",
+       "      <td>0.109049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DBLP</td>\n",
+       "      <td>GuidedLDAModel</td>\n",
+       "      <td>0.523195</td>\n",
+       "      <td>-0.119319</td>\n",
+       "      <td>0.006700</td>\n",
+       "      <td>-2.471982</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.373151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DBLP</td>\n",
+       "      <td>GuidedBERTopicModel</td>\n",
+       "      <td>0.555126</td>\n",
+       "      <td>-0.384500</td>\n",
+       "      <td>0.012776</td>\n",
+       "      <td>-2.423790</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>0.045340</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  dataset                model  coherence_c_v  coherence_c_uci  \\\n",
+       "0    DBLP             LDAModel       0.544437        -0.275490   \n",
+       "1    DBLP        BERTopicModel       0.518061        -0.038156   \n",
+       "2    DBLP       GuidedLDAModel       0.523195        -0.119319   \n",
+       "3    DBLP  GuidedBERTopicModel       0.555126        -0.384500   \n",
+       "\n",
+       "   coherence_c_npmi  coherence_u_mass  diversity  supervised_correlation  \n",
+       "0          0.017506         -2.186399      0.815                0.501695  \n",
+       "1          0.026235         -2.315851      0.812                0.109049  \n",
+       "2          0.006700         -2.471982      1.000                0.373151  \n",
+       "3          0.012776         -2.423790      0.720                0.045340  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dblp_metrics_df = compute_metrics_df(dataset_name='DBLP', models=models, n_iterations=5, load_from_file=False)\n",
+    "dblp_metrics_df = compute_metrics_df(dataset_name='DBLP', models=models, n_iterations=5, load_from_file=True)\n",
     "print(dblp_metrics_df.to_latex(index=False))\n",
     "dblp_metrics_df"
    ]
@@ -642,11 +758,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llrrrrrr}\n",
+      "\\toprule\n",
+      "dataset & model & coherence_c_v & coherence_c_uci & coherence_c_npmi & coherence_u_mass & diversity & supervised_correlation \\\\\n",
+      "\\midrule\n",
+      "M10 & LDAModel & 0.449055 & -0.499560 & -0.001402 & -2.319012 & 0.826000 & 0.360801 \\\\\n",
+      "M10 & BERTopicModel & 0.519112 & -0.952851 & -0.004758 & -2.605326 & 0.918182 & 0.512322 \\\\\n",
+      "M10 & GuidedLDAModel & 0.476773 & -0.562618 & -0.007545 & -2.304438 & 1.000000 & 0.307786 \\\\\n",
+      "M10 & GuidedBERTopicModel & 0.525712 & -0.136657 & 0.028914 & -2.376992 & 0.909091 & 0.531812 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>model</th>\n",
+       "      <th>coherence_c_v</th>\n",
+       "      <th>coherence_c_uci</th>\n",
+       "      <th>coherence_c_npmi</th>\n",
+       "      <th>coherence_u_mass</th>\n",
+       "      <th>diversity</th>\n",
+       "      <th>supervised_correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M10</td>\n",
+       "      <td>LDAModel</td>\n",
+       "      <td>0.449055</td>\n",
+       "      <td>-0.499560</td>\n",
+       "      <td>-0.001402</td>\n",
+       "      <td>-2.319012</td>\n",
+       "      <td>0.826000</td>\n",
+       "      <td>0.360801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M10</td>\n",
+       "      <td>BERTopicModel</td>\n",
+       "      <td>0.519112</td>\n",
+       "      <td>-0.952851</td>\n",
+       "      <td>-0.004758</td>\n",
+       "      <td>-2.605326</td>\n",
+       "      <td>0.918182</td>\n",
+       "      <td>0.512322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M10</td>\n",
+       "      <td>GuidedLDAModel</td>\n",
+       "      <td>0.476773</td>\n",
+       "      <td>-0.562618</td>\n",
+       "      <td>-0.007545</td>\n",
+       "      <td>-2.304438</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.307786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M10</td>\n",
+       "      <td>GuidedBERTopicModel</td>\n",
+       "      <td>0.525712</td>\n",
+       "      <td>-0.136657</td>\n",
+       "      <td>0.028914</td>\n",
+       "      <td>-2.376992</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>0.531812</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  dataset                model  coherence_c_v  coherence_c_uci  \\\n",
+       "0     M10             LDAModel       0.449055        -0.499560   \n",
+       "1     M10        BERTopicModel       0.519112        -0.952851   \n",
+       "2     M10       GuidedLDAModel       0.476773        -0.562618   \n",
+       "3     M10  GuidedBERTopicModel       0.525712        -0.136657   \n",
+       "\n",
+       "   coherence_c_npmi  coherence_u_mass  diversity  supervised_correlation  \n",
+       "0         -0.001402         -2.319012   0.826000                0.360801  \n",
+       "1         -0.004758         -2.605326   0.918182                0.512322  \n",
+       "2         -0.007545         -2.304438   1.000000                0.307786  \n",
+       "3          0.028914         -2.376992   0.909091                0.531812  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "m10_metrics_df = compute_metrics_df(dataset_name='M10', models=models, n_iterations=5, load_from_file=False)\n",
+    "m10_metrics_df = compute_metrics_df(dataset_name='M10', models=models, n_iterations=5, load_from_file=True)\n",
     "print(m10_metrics_df.to_latex(index=False))\n",
     "m10_metrics_df"
    ]
